--- a/styles/subaa.css
+++ b/styles/subaa.css
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fondamento&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=ZCOOL+XiaoWei&display=swap");
 .button-basic, nav .header .navbar ul li .btn button {
   border-radius: 5px;
   font-size: 20px;
@@ -58,6 +64,7 @@ nav .header .navbar ul {
 nav .header .navbar ul li {
   position: relative;
   font-size: .9rem;
+  padding: 10px 0;
 }
 
 nav .header .navbar ul li:hover .drop {
@@ -84,7 +91,6 @@ nav .header .navbar ul li i {
 nav .header .navbar ul li .drop {
   display: none;
   line-height: 2.7;
-  margin-top: 15px;
   background-color: #fff;
   width: 300px;
   border: 1px solid #e6e6e6;
@@ -92,6 +98,8 @@ nav .header .navbar ul li .drop {
           box-shadow: 0 2px 10px 0 #444444;
   border-radius: 4px;
   position: absolute;
+  top: 100%;
+  z-index: 1;
 }
 
 nav .header .navbar ul li .drop .drop-down {
@@ -261,6 +269,7 @@ nav .icons #menu-btn {
 section .search-play {
   background-image: url(../assets/images/background.jpg);
   background-repeat: no-repeat;
+  background-attachment: center;
   height: 100vh;
   margin-top: 3.5rem;
   background-size: 100% 90%;
@@ -270,6 +279,7 @@ section .search-play {
 @media (max-width: 900px) {
   section .search-play {
     background-image: url(../assets/images/home.png);
+    background-attachment: center;
   }
 }
 
@@ -318,6 +328,8 @@ section .search-play .search-1:hover {
 
 section .search-play .search-1 input {
   height: 40px;
+  width: 96%;
+  font-size: 17px;
   border-radius: 30px;
   border: none;
   outline: none;
@@ -334,8 +346,8 @@ section .search-play .popular {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  -webkit-transform: translate(3%, 600%);
-          transform: translate(3%, 600%);
+  -webkit-transform: translate(3%, 550%);
+          transform: translate(3%, 550%);
 }
 
 @media (max-width: 900px) {
@@ -345,6 +357,7 @@ section .search-play .popular {
 }
 
 section .search-play .popular h5 {
+  font-family: 'Varela Round', sans-serif;
   font-size: 20px;
 }
 
@@ -640,6 +653,8 @@ section .choose-corpiz .corpiz {
 }
 
 section .choose-corpiz .corpiz h2 {
+  font-family: 'Fondamento', cursive;
+  font-size: 30px;
   padding-bottom: 50px;
   text-transform: capitalize;
 }
@@ -717,13 +732,16 @@ section .choose-corpiz .national-top .cards .card .logo img {
 }
 
 section .choose-corpiz .national-top .cards .card .content h2 {
+  text-transform: capitalize;
+  font-family: 'Varela Round', sans-serif;
   color: #333333;
   padding-bottom: 15px;
 }
 
 section .business {
+  font-family: 'DM Serif Display', serif;
   padding: 0px 40px 40px;
-  font-size: 40px;
+  font-size: 30px;
   line-height: 1.2;
   color: #404040;
   -webkit-animation: fallout 1.5s ease-in;
@@ -805,6 +823,7 @@ section .working-process .working {
 }
 
 section .working-process .working h2 {
+  font-family: 'DM Serif Display', serif;
   color: #404040;
   font-size: 40px;
   margin-bottom: 30px;
@@ -998,6 +1017,7 @@ section .process h2 {
 
 section .services {
   background-image: url(../assets/images/background-services.jpg);
+  background-attachment: center;
   background-size: cover;
   background-repeat: no-repeat;
   display: -ms-grid;
@@ -1105,7 +1125,9 @@ section .services .registration .cards .card img {
 }
 
 section .services .registration .cards .card h2 {
+  font-family: 'Acme', sans-serif;
   padding-bottom: 20px;
+  color: #13233e;
   text-transform: capitalize;
 }
 
@@ -1167,6 +1189,7 @@ section .service h2 {
 
 section .application {
   background-image: url(../assets/images/background-lap.jpg);
+  background-attachment: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -1240,6 +1263,8 @@ section .application .app-forms .forms .form img {
 }
 
 section .application .app-forms .forms .form h4 {
+  font-family: 'ZCOOL XiaoWei', serif;
+  letter-spacing: 1px;
   font-size: 25px;
 }
 
@@ -1330,6 +1355,7 @@ section .app-corpiz .corpiz {
 }
 
 section .app-corpiz .corpiz h2 {
+  font-family: 'Cinzel Decorative', cursive;
   font-size: 40px;
   margin-bottom: 20px;
 }
@@ -1418,6 +1444,7 @@ section .app-corpiz .app img {
 }
 
 section .network-paterns .network {
+  font-family: 'DM Serif Display', serif;
   text-align: center;
   margin-top: 50px;
   text-transform: capitalize;
@@ -1841,9 +1868,10 @@ section .article-card .cards .card:nth-child(4) {
 
 section .article-card .cards .card {
   background-image: url(../assets/images/card-2.jpg);
+  background-attachment: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center center;
   overflow: hidden;
   -webkit-transition: 0.1s;
   transition: 0.1s;
@@ -2307,7 +2335,9 @@ section .footer .footer-flex .flex ul li:hover {
 section .footer .footer-flex .flex ul li i {
   background-color: #062367;
   color: #fff;
-  padding: 10px;
+  padding: 10px 0px;
+  text-align: center;
+  width: 40px;
 }
 
 section .footer .footer-flex .flex ul li i:hover {
@@ -2362,6 +2392,24 @@ section .footer .copyright h4 {
   text-align: center;
   color: #fff;
   font-weight: 100;
+}
+
+.button-fixed button {
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+  font-size: 22px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  background: #13233e;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.button-fixed button:hover {
+  background: #efa434;
 }
 
 @media (max-width: 1100px) {
