--- a/styles/subaa.scss
+++ b/styles/subaa.scss
@@ -2,6 +2,14 @@
 @import "color";
 @import "mixin";
 
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fondamento&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=ZCOOL+XiaoWei&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
@@ -38,6 +46,7 @@ nav{
                 li{
                     position: relative;
                     font-size: .9rem;
+                    padding: 10px 0;
                     &:hover{
                         .drop{
                             display: block;
@@ -60,13 +69,14 @@ nav{
                     .drop{
                         display: none;
                         line-height: 2.7;
-                        margin-top: 15px;
                         background-color: $white;
                         width: 300px;
                         border: 1px solid $border;
                         box-shadow: 0 2px 10px 0 rgb(68, 68, 68);
                         border-radius: 4px;
                         position: absolute;
+                        top: 100%;
+                        z-index: 1;
                         .drop-down{
                             @include flex;
                             border-bottom: 1px solid $border;
@@ -204,6 +214,7 @@ section{
     .search-play{
         background-image: url(../assets/images/background.jpg);
         background-repeat: no-repeat;
+        background-attachment: center;
         height: 100vh;
         margin-top: 3.5rem;
         background-size: 100% 90%;
@@ -211,6 +222,7 @@ section{
 
         @media (max-width:900px) {
             background-image: url(../assets/images/home.png);
+            background-attachment: center;
         }
         .search-1 {
             position: absolute;
@@ -238,6 +250,8 @@ section{
             }
             input {
                 height: 40px;
+                width: 96%;
+                font-size: 17px;
                 border-radius: 30px;
                 border: none;
                 outline: none;
@@ -250,11 +264,13 @@ section{
             align-items: center;
             justify-content: center;
             width: 100%;
-            transform: translate(3%, 600%);
+            transform: translate(3%, 550%);
             @media (max-width:900px) {
                 display:none;
             }
             h5{
+                font-family: 'Varela Round', sans-serif;
+                // font-family: 'Fondamento', cursive;
                 font-size: 20px;
             }
         }
@@ -426,6 +442,8 @@ section{
                 padding: 50px 40px;
             }
             h2{
+                font-family: 'Fondamento', cursive;
+                font-size: 30px;
                 padding-bottom: 50px;
                 text-transform: capitalize;
             }
@@ -468,6 +486,8 @@ section{
                     }
                     .content{
                         h2{
+                            text-transform: capitalize;
+                            font-family: 'Varela Round', sans-serif;
                             color: #333333;
                             padding-bottom: 15px;
                         }
@@ -481,8 +501,9 @@ section{
 
 section{
     .business{
+        font-family: 'DM Serif Display', serif;
         padding: 0px 40px 40px;
-        font-size: 40px;
+        font-size: 30px;
         line-height: 1.2;
         color: #404040;
         animation: fallout 1.5s ease-in; 
@@ -532,6 +553,7 @@ section{
                 padding: 0 20px;
             }  
             h2{
+                font-family: 'DM Serif Display', serif;
                 color: #404040;
                 font-size: 40px;
                 margin-bottom: 30px;
@@ -636,6 +658,7 @@ section{
 section{
     .services{
         background-image: url(../assets/images/background-services.jpg);
+        background-attachment: center;
         background-size: cover;
         background-repeat: no-repeat;
         display: grid;
@@ -703,7 +726,9 @@ section{
                         padding-bottom: 20px;
                     }
                     h2{
+                        font-family: 'Acme', sans-serif;
                         padding-bottom: 20px;
+                        color: $dark-blue;
                         text-transform: capitalize;
                     }
                     p{
@@ -750,6 +775,7 @@ section{
 section{
     .application{
         background-image: url(../assets/images/background-lap.jpg);
+        background-attachment: center;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
@@ -791,6 +817,8 @@ section{
                         margin-bottom: 20px;
                     }
                     h4{
+                        font-family: 'ZCOOL XiaoWei', serif;
+                        letter-spacing: 1px;
                         font-size: 25px;
                         @media (max-width:900px){
                             margin-bottom: 40px;
@@ -851,6 +879,7 @@ section{
                 padding: 50px 20px;
             }
             h2{
+                font-family: 'Cinzel Decorative', cursive;
                 font-size: 40px;
                 margin-bottom: 20px;
             }
@@ -906,6 +935,7 @@ section{
 section{
     .network-paterns{
         .network{
+            font-family: 'DM Serif Display', serif;
             text-align: center;
             margin-top: 50px;
             text-transform: capitalize;
@@ -1174,9 +1204,10 @@ section{
             }
             .card{
                 background-image: url(../assets/images/card-2.jpg);
+                background-attachment: center;
                 background-size: cover;
                 background-repeat: no-repeat;
-                background-position: center ;
+                background-position: center center;
                 overflow: hidden;
                 transition: 0.1s;
                 position: relative;
@@ -1479,7 +1510,9 @@ section{
                         i{
                             background-color: $icon;
                             color: $white;
-                            padding: 10px;
+                            padding: 10px 0px;
+                            text-align: center;
+                            width: 40px;
                             &:hover{
                                 background-color: $orange;
                             }
@@ -1528,6 +1561,25 @@ section{
 }
 
 
+
+.button-fixed{
+    button{
+        position: fixed;
+        bottom: 20px;
+        right: 10px;
+        font-size: 22px;
+        width: 40px;
+        height: 40px;
+        border-radius: 50px;
+        background: $dark-blue;
+        color: $white;
+        border: none;
+        cursor: pointer;
+        &:hover{
+            background: $orange;
+        }
+    }
+}
 
 
 
